V1.95 fixed the more info popup on mobile & did some various other minor style changes

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ html {
   scroll-behavior: smooth;
 }
 
+html,body{
+  margin:0;
+  }
+
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -60,30 +64,11 @@ button {
 
 
 /*TODO
-- more info popup [X]
-only have one instance of the popup and load
-the data in by getting from a module(object)
-  - will have a video of a full demo of the app(with commentary maybe)
-  - what tech was used & why
-  - a description in bullets points
-
 - view on very big screens (use vw units)
   eg: font-size:5.5vw;
 
-- aside sidebar, get always 100% height on screen
-
 - on click of more info btn get
  the data to show in the popup (get from an object)
-*/
-
-/*
-Mobile view checklist
-- navbar
-- mobile menu
-- skills
-- popup menu
-- welcome msg
-
 */
 
 
@@ -171,7 +156,7 @@ padding:20px;
 
 .sidebar {
   color:var(--primary-white);
-  background:#d94821;
+  background:#d43a3a;
   max-height: 0;
   transition: max-height 0.45s ease-out;
   overflow: hidden;
@@ -239,6 +224,7 @@ padding:20px;
   margin-left:auto;
   margin-right:auto;
   max-width:500px;
+  letter-spacing: 0.75px;
 }
 
 .welcome-msg h2 {
@@ -265,7 +251,7 @@ padding:20px;
 .skills__heading {
   text-align: center;
   font-size:3rem;
-  /* letter-spacing:  0.25rem; */
+  letter-spacing: 0.75px;
 }
 
 
@@ -331,6 +317,7 @@ padding:20px;
   text-align: center;
   font-size:3rem;
   margin: 0 0 0.5rem 0;
+  letter-spacing: 0.75px;
 }
 
 .projects__cards {
@@ -392,16 +379,17 @@ padding:20px;
 
 .more-info__btn .icon {
   font-size:2.25rem;
-  /* color: var(--primary-red); */
 }
 
 
 .project__info__heading {
   margin-top:0.75rem;
+  font-size: 1.35rem;
+  letter-spacing: 0.75px;
 }
 
 .project__info__description {
-  margin:calc(0.85rem + 0.75rem) 0 0.85rem 0;
+  margin:1rem 0 0.85rem 0;
 }
 
 .project__info__links {
@@ -417,8 +405,6 @@ padding:20px;
   text-decoration: underline;
 }
 
-
-
 .more-info-popup__outer {
   position: absolute;
   top:0;
@@ -430,15 +416,9 @@ padding:20px;
   display:none;
 }
 
-
-body {
-  /* overflow: hidden; */
-}
-
 .show-popup--body {
   overflow: hidden;
 }
-
 
 .show-popup {
   z-index:150;
@@ -455,18 +435,18 @@ body {
   top:50%;
   transform: translate(-50%, -50%);
   padding:1rem;
-  width:auto;
-  height:auto;
+  width:60vw;
+  height:50vh;
   border-radius: 5px;
+  display:flex;
+  flex-direction: column;
 }
 
-
 .more-info-popup__inner {
+  flex:1;
   position: relative;
   display:grid;
   grid-template-columns: 1fr 1fr;
-  /* justify-content: center;
-  align-items:center; */
   grid-column-gap:1rem;
 }
 
@@ -481,7 +461,6 @@ body {
   font-size:2rem;
   cursor: pointer;
 }
-
 
 .info__video__heading {
   margin-bottom: 0.25rem;
@@ -512,11 +491,6 @@ body {
   margin-top:0.5rem;
 }
 
-.info__tech__items {
-  /* margin-left:1.25rem; */
-
-}
-
 
 
 
@@ -533,6 +507,7 @@ body {
 
 .contact__header {
   margin:0 0 2rem 0;
+  letter-spacing: 0.75px;
 }
 
 .contact__heading {
@@ -561,14 +536,54 @@ body {
 
 
 
+@media (max-width:960px) {
+  .more-info-popup {
+    left:50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    padding:1rem;
+    width:60%;
+    height:80%;
+    border-radius: 5px;
+    display:flex;
+    flex-direction: column;
+    
+  } 
+
+  .more-info-popup__inner {
+    flex:1;
+    position: relative;
+    display:grid;
+    grid-column-gap:0rem;
+    grid-row-gap:1rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .info__video-container {
+    width:100%;
+    height:100%;
+  }
+  
+  .info__video {
+    position: relative;
+    width:100%;
+    height:inherit;
+  }
+
+  .more-info-popup .project__info__links {
+    width:calc(100% - 0.5rem);
+    padding:0.5rem 0rem;
+    margin-top:1rem;
+  }
+}
 
 
 
 
 
 
-
-/*medium mobile view*/
+/*mobile view*/
 @media (max-width:640px) {
   body {
     /*Fixes problem where
@@ -609,41 +624,58 @@ body {
 
 
   .more-info-popup {
-    left:50%;
-    top:50%;
-    transform: translate(-50%, -50%);
-    padding:1rem;
     width:85%;
-    height:85%;
-    border-radius: 5px;
+    height:90%;
+  } 
+  
+}
+
+/*very small*/
+@media (max-width:380px) {
+  .navbar__items {
+    display:none;
   }
 
+  .welcome-section {
+    background:var(--primary-black);
+  }
+
+  .welcome-msg {
+    font-size:5.5vw;
+    max-width:85%;
+  }
   
 
-  .more-info-popup__inner {
-    position: relative;
+  .open-sidebar-btn {
     display:flex;
-    flex-direction: column;
-    /* justify-content: center;
-    align-items:center; */
-    grid-column-gap:0rem;
-    grid-row-gap:1rem;
   }
-  /*CURRENTLY WORKING ON MOBILE VIEW OF POPUP MENU*/
-  .info__video-container {
+
+  .front-end__skills {
+    flex-direction: column;
+  }
+
+  .more-info-popup__outer {
+    position: absolute;
+    top:0;
+    left:0;
     width:100%;
     height:100%;
+
   }
-  
+
+  .more-info-popup {
+    width:90%;
+    height:auto;
+
+    left:50%;
+    top:1%;
+    transform: translate(-50%, -1%);
+  }
+
   .info__video {
     position: relative;
     width:100%;
     height:inherit;
   }
-
-  .more-info-popup .project__info__links {
-    width:calc(100% - 0.5rem);
-    padding:0.5rem 0rem;
-    margin-top:1rem;
-  }
+  
 }
